<resources>
    <string name="app_name">ArduBand</string>
    <string name="action_settings">Sobre</string>
    <string name="author">Autor:</string>
    <string name="author_name">Israel Blancas Álvarez</string>
    <string name="repository">Ir al repositorio</string>
    <string name="tempo">Tempo</string>
    <string name="apply">Aplicar</string>
    <string name="connected">Conectado</string>
    <string name="disconnected">Desconectado</string>
</resources>
