<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tempo"
        android:id="@+id/tempoText"
        android:layout_below="@+id/tool_bar"
        android:layout_centerHorizontal="true"
        android:textSize="70dp"
        android:textIsSelectable="false"
        android:layout_margin="20dp"
        android:textColor="@color/PrimaryText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/tempo"
        android:layout_below="@+id/tempoText"
        android:maxLength="3"
        android:textSize="90dp"
        android:layout_alignEnd="@+id/tempoText"
        android:layout_alignStart="@+id/tempoText"
        android:textColor="@color/PrimaryText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:id="@+id/applyButton"
        android:elevation="6dp"
        android:layout_below="@+id/tempo"
        android:textSize="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"

        android:layout_margin="10dp"
        android:clickable="true"
        android:elegantTextHeight="true"
        android:ellipsize="middle"
        android:enabled="true"
        android:importantForAccessibility="yes"
        android:textColor="@color/PrimaryText" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/disconnected"
        android:id="@+id/textView"
        android:layout_below="@+id/applyButton"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
 